src/components/Flyout/style.less
@keyframes flyout-in-top {
	0% { transform: translate3d(0, -16px; 0); opacity: 0; }
	100% { transform: translate3d(0, 0, 0); opacity: 1; }
}

@keyframes flyout-in-bottom {
	0% { transform: translate3d(0, 16px; 0); opacity: 0; }
	100% { transform: translate3d(0, 0, 0); opacity: 1; }
}

@keyframes flyout-out {
	0% { opacity: 1; }
	100% { opacity: 0; }
}

.flyout {
	display: flex;
	flex-direction: column;
	position: absolute;
	min-width: 96px;
	max-width: 456px;
	min-height: 40px;
	max-height: 100%;
	background-color: var(--chrome-medium-low);
	box-shadow: inset 0 0 0 2px var(--chrome-high);
	overflow: hidden;
	z-index: 900;
	opacity: 0;
	
	
	&.animate-top {
		animation: flyout-in-top 400ms cubic-bezier(0, 1.0, 0.168, 0.976) forwards;
	}
	
	&.animate-bottom {
		animation: flyout-in-bottom 400ms cubic-bezier(0, 1.0, 0.168, 0.976) forwards;
	}
	
	&.animate-out {
		animation: flyout-out 200ms cubic-bezier(0.215, 0.610, 0.355, 1.000) forwards;
	}
	
	.flyout-content {
		padding: 12px;
		overflow-y: auto;
	}
}

